--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
       <div class="difficult">
         <h2>Scegli la tua difficoltà!</h2>
 
-      <button id="easy">Easy</button>
-      <button id="medium">Medium</button>
-      <button id="hard">Hard</button>
+      <select name="" id="difficulty">
+        <option value="1">Easy</option>
+        <option value="2">Medium</option>
+        <option value="3">Hard</option>
+      </select>
+
+      <button id="play">演劇</button>
       </div>
     </div>
 
@@ -26,7 +30,7 @@
       
     </div>
 
-    <script src="./main.js"></script>
+    <script src="./main2.js"></script>
 
   </body>
 </html>
